# iconcaps

./: .gitignore  Dockerfile  README.md  create_keycap.py  main.py  pyproject.toml
.github/workflows/: main.yml
keycap_blank/: basecapv1.stl  basecapv2-Body.stl  basecapv2.FCStd  basecapv2.FCStd1
